--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bad-words": "^3.0.0",
     "express": "^4.18.1",
+    "jshint": "^2.13.4",
     "moment": "^2.29.3",
     "socket.io": "^2.2.0"
   },
